Updated build.bat convenience file