@@ -1,2 +1,2 @@
 @echo Compiling Build.java.
-@cmd /K java "Shared\src\ritzow\sandbox\build\Build.java" %*
+@cmd /K java --enable-preview --source 14 "Shared\src\ritzow\sandbox\build\Build.java" %*
